feat(engine): reestruturação do barramento de chamadas para True Lazy Binding, Binder Quântico e Transmutação (v22)
Revisão completa do ciclo de vida de invocações da JVM, fazendo a transição de um modelo de "avaliação ansiosa por valor" para "entrega preguiçosa de AST", eliminando computação desnecessária e blindando contratos de tipagem.

DESTAQUES ARQUITETURAIS:

* True Lazy Binding: Promovida a interface `XplCallable.call` para receber a AST crua (`List<Expr.CallArg>`). Expressões de valores padrão atingem o estado de abstração de custo zero (Zero-Cost Lazy Defaults).
* Algoritmo de Binder Quântico (3 Fases): Implementada a resolução híbrida de argumentos no `XplFunction`. Permite invocações nomeadas fora de ordem mantendo a integridade posicional estrita dos parâmetros sobreviventes.
* Alfândega de Transmutação: Substituída a verificação estática por coerção ergonómica proativa (`coerceToTargetType`). Primitivos e instâncias com gancho `to_string()` são transmutados em texto nativamente.
* As 3 Leis do Contrato de Retorno: Implementada guilhotina de execução para intercetar retornos intrusos em funções dinâmicas/void e promessas falhadas (atingir o '}' sem disparar return).
* Blindagem do Prelude: Injetado desempacotador de AST (`unpackNativeArgs`) para proteger funções nativas Java (`println`, `shell`, `Map`, `ArrayMethods`) contra vazamento de referências de memória.
* Correções Forenses: Resolvida a hidratação de AST em Arrow Functions e ativado o Lookahead Quântico no Parser para chamadas de navegação opcional (`?.()`).

BREAKING CHANGE: Funções e classes nativas do Prelude implementadas em Java puro passam a receber a AST crua e são obrigadas a invocar `Interpreter.unpackNativeArgs()` na primeira linha.